# bxt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bun.lockb  package.json
daemon/: CMakeLists.txt
daemon/tests/: CMakeLists.txt
daemon/tests/core/domain/value_objects/: PackagePoolEntryTest.cpp
web/: bun.lockb  package.json  vite.config.ts
web/app/: cookies.server.ts  root.tsx
web/app/api/: auth.ts  compare.ts  packages.ts  users.ts  wretch.ts
web/app/components/: CommitCard.tsx  CommitDrawer.tsx  CommitModal.tsx  PackageModal.tsx  SectionLabel.tsx  SectionSelect.tsx  SnapshotModal.tsx  UserModal.tsx
web/app/components/compare/: CompareInputForm.tsx  CompareTable.tsx
web/app/hooks/: BxtFsHooks.ts  BxtHooks.ts  useLocalStorage.ts
web/app/routes/: _index.tsx  admin.tsx  compare.tsx  login.tsx  logs.tsx
